# nvs

./: README.MD  pyproject.toml  scratch_project.code-workspace  setup.py
.devcontainer/: Dockerfile  devcontainer.json
nvs/: __init__.py  ex_1.py
nvs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
